--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         
         <!-- Stylesheet -->
-        <link rel="stylesheet" type="text/css" href="blog-styles.css">  
+        <link rel="stylesheet" type="text/css" href="styles2.css">  
         
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Heebo:300,400,500,700" rel="stylesheet">
@@ -29,7 +29,7 @@
                 <p><a href="index.html">home</a></p>
             </div>
             <div class="col-xs-3">
-                <p><a href="about.html">about</a></p>
+                <p><a class="active" href="about.html">about</a></p>
             </div>
             <div class="col-xs-3">
                 <p><a href="blog.html">blog</a></p>
